--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-text-truncate": "^0.18.0",
+    "react-tsparticles": "^1.43.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
